feat: add grupos CRUD
